@@ -1,0 +1,44 @@
+# Copyright 2012 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# This file is part of the gdb testsuite.  It is intended to test that
+# gdb can correctly print arrays with indexes for each element of the
+# array.
+
+set testfile "enum_cond"
+set srcfile ${testfile}.c
+set binfile ${objdir}/${subdir}/${testfile}
+
+set opts [list debug additional_flags=-fshort-enums]
+if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable $opts] != "" } {
+    untested "Could not compile ${srcfile}"
+    return -1
+}
+
+clean_restart $testfile
+
+if ![runto_main] then {
+    perror "could not run to main"
+    continue
+}
+
+gdb_test "break call_me if param.e == 1" \
+         "Breakpoint $decimal at $hex: file .*$srcfile, line $decimal\\."
+
+# Continue.  We should hit our breakpoint...
+gdb_test "continue" \
+         "Breakpoint $decimal, call_me \\(param=\\.\\.\\.\\) at .*" \
+         "continue to conditional breakpoint in call_me"
+
