@@ -1,5 +1,9 @@
 2012-03-13  Joel Brobecker  <brobecker@adacore.com>
 
+	* gdb.base/enum_cond.c, gdb.base/enum_cond.exp: New testcase.
+
+2012-03-13  Joel Brobecker  <brobecker@adacore.com>
+
 	* gdb.ada/bp_range_type: New testcase.
 
 2012-03-13  Doug Evans  <dje@google.com>
